grammar.js
    source_file: ($) =>
      repeat(
        choice(
          $.assertion,
          $.function_definition,
          $.function_declaration,
          $.enum,
          $.enum_struct,
          $.typedef,
          $.typeset,
          $.functag,
          $.funcenum,
          $.methodmap,
          $.struct,
          $.struct_declaration,
          $.global_variable_declaration,
          $.old_global_variable_declaration,
          $.hardcoded_symbol,
          $.alias_declaration,
          $.alias_assignment,
        ),
      ),

    // Preprocessor
    function_definition: ($) =>
      choice(
        seq(
          field("visibility", optional($.visibility)),
          field("returnType", seq($.type, repeat($.dimension))),
          field("name", $.identifier),
          field("parameters", $.parameter_declarations),
          field("body", $.block),
        ),
        seq(
          field("visibility", optional($.visibility)),
          field("returnType", optional($.old_type)),
          field("name", $.identifier),
          field("parameters", $.parameter_declarations),
          field("body", $._statement),
        ),
      ),

    function_declaration: ($) =>
      seq(
        field("kind", $.function_declaration_kind),
        field(
          "returnType",
          optional(choice(seq($.type, optional($.dimension)), $.old_type)),
        ),
        field("name", $.identifier),
        field("parameters", $.parameter_declarations),
        optional(seq("=", $.identifier)), // native float __FLOAT_MUL__(float a, float b) = FloatMul;
        $._semicolon,
      ),

    parameter_declarations: ($) =>
      seq(
        "(",
        commaSep(choice($.parameter_declaration, $.rest_parameter)),
        ")",
      ),

    parameter_declaration: ($) =>
      seq(
        field("storage_class", optional($.variable_storage_class)),
        choice(
          // Old
          seq(
            optional(field("type", $.old_type)),
            field("name", $.identifier),
            repeat(choice($.dimension, $.fixed_dimension)),
          ), // foo | foo[] | Float: foo
          seq("&", field("name", $.identifier)), // &foo
          seq(field("type", seq("&", $.old_type)), field("name", $.identifier)), // &Float: foo
          // New
          seq(field("type", $.type), "&", field("name", $.identifier)), // float &foo
          seq(field("type", $.array_type), field("name", $.identifier)), // float[] foo
          seq(
            field("type", $.type),
            field("name", $.identifier),
            repeat(choice($.dimension, $.fixed_dimension)),
          ), // float foo | float foo[]
        ),
        optional(seq("=", field("defaultValue", $._expression))),
      ),

    variable_storage_class: ($) => "const",

    visibility: ($) =>
      choice(
        "public",
        "stock",
        "static",
        seq("public", "static"),
        seq("stock", "static"),
        seq("static", "stock"),
        seq("static", "public"),
      ),

    type: ($) => choice($.builtin_type, $.identifier, $.any_type),

    array_type: ($) =>
      seq($.type, repeat1(choice($.dimension, $.fixed_dimension))),

    old_type: ($) =>
      seq(
        choice(
          $.old_builtin_type,
          $.identifier,
          $.any_type,
          $.multi_tag
        ),
        token.immediate(":"),
      ),

    dimension: ($) => seq("[", "]"),

    fixed_dimension: ($) =>
      seq(
        "[",
        $._expression,
        optional(field("packing", $.dimension_packing)),
        "]",
      ),

    builtin_type: ($) =>
      choice("void", "bool", "int", "int64", "float", "char"),

    // `void` appears in both styles: new `void Foo()` and old `void:Foo()`.
    old_builtin_type: ($) => choice("_", "Float", "bool", "String", "void"),

    any_type: ($) => "any",

    block: ($) => seq("{", repeat($._statement), "}"),

    // Statements
    _statement: ($) =>
      choice(
        $.block,
        $.variable_declaration_statement,
        $.old_variable_declaration_statement,
        $.for_statement,
        $.while_statement,
        $.do_while_statement,
        $.break_statement,
        $.continue_statement,
        $.condition_statement,
        $.switch_statement,
        $.return_statement,
        $.delete_statement,
        $.expression_statement,
      ),

    condition_statement: ($) =>
      prec.right(
        seq(
          "if",
          "(",
          field("condition", $._expression),
          ")",
          field("truePath", $._statement),
          optional(seq("else", field("falsePath", $._statement))),
        ),
      ),

    expression_statement: ($) =>
      prec.right(
        seq(choice($._expression, $.comma_expression), optional($._semicolon)),
      ),

    return_statement: ($) =>
      prec.right(
        seq(
          "return",
          optional(
            field("expression", choice($._expression, $.comma_expression)),
          ),
          optional($._semicolon),
        ),
      ),

    _semicolon: ($) => choice($._automatic_semicolon, $._manual_semicolon),

    // Expressions

    _expression: ($) =>
      choice(
        $.assignment_expression,
        $.call_expression,
        $.array_indexed_access,
        $.packed_array_indexed_access,
        $.ternary_expression,
        $.field_access,
        $.scope_access,
        $.binary_expression,
        $.unary_expression,
        $.update_expression,
        $.sizeof_expression,
        $.view_as,
        $.old_type_cast,
        $.identifier,
        $._literal,
        $.parenthesized_expression,
        $.this,
        $.new_expression,
      ),

    // This is needed to resolve ambiguity between symbols and old type casts in case statements.
    call_expression: ($) =>
      prec.left(
        PREC.CALL,
        seq(
          field("function", choice($.builtin_type, $.identifier, $.field_access)),
          field("arguments", $.call_arguments),
        ),
      ),

    call_arguments: ($) =>
      prec.left(
        -11,
        seq(
          "(",
          commaSep(choice($._expression, $.named_arg, $.ignore_argument)),
          ")",
        ),
      ),

    array_indexed_access: ($) =>
      seq(
        field(
          "array",
          choice($.identifier, $.array_indexed_access, $.field_access),
        ),
        "[",
        field("index", $._expression),
        "]",
      ),

    // https://forums.alliedmods.net/showthread.php?t=90735
    parenthesized_expression: ($) =>
      seq(
        "(",
        field("expression", choice($._expression, $.comma_expression)),
        ")",
      ),

    field_access: ($) =>
      prec.right(
        PREC.FIELD,
        seq(field("target", $._expression), ".", field("field", $.identifier)),
      ),

    unary_expression: ($) => unaryExpression($._expression),

    binary_expression: ($) => binaryExpression($._expression),

    old_type_cast: ($) =>
      prec.left(
        PREC.CAST,
        seq(field("type", $.old_type), field("value", $._expression)),
      ),

    int_literal: ($) => {
      const separator = "_";
      const hex = /[0-9a-fA-F]/;
      const octo = /[o0-7]/;
      const decimal = /[0-9]/;
      const hexDigits = seq(repeat1(hex), repeat(seq(separator, repeat1(hex))));
      const octoDigits = seq(
        repeat1(octo),
        repeat(seq(separator, repeat1(octo))),
      );
      const decimalDigits = seq(
        repeat1(decimal),
        repeat(seq(separator, repeat1(decimal))),
      );
      return token(
        seq(
          choice(
            decimalDigits,
            seq("0b", decimalDigits),
            seq("0x", hexDigits),
            seq("0o", octoDigits),
          ),
          optional(seq(/[eEpP]/, optional(seq(optional(/[-\+]/), hexDigits)))),
        ),
      );
    },

    float_literal: _ => {
      const digits = repeat1(/[0-9]+_?/);
      const exponent = seq(/[eE][\+-]?/, digits);

      return token(
        seq(digits, '.', optional(digits), optional(exponent)),
      );
    },

    bool_literal: ($) => token(choice("true", "false")),

    identifier: ($) => /[a-zA-Z_]\w*/,

    // http://stackoverflow.com/questions/13014947/regex-to-match-a-c-style-multiline-comment/36328890#36328890
