test/corpus/array_indexed_access.txt
==============================
access array member - constant
==============================

void MyFunc(int[] myvar) {
    myvar[0];
}

---

(source_file
  (function_definition
    returnType: (type
      (builtin_type)
    )
    name: (symbol)
    parameters: (parameter_declarations
      (parameter_declaration
        type: (array_type
          (type
            (builtin_type)
          )
          (dimension)
        )
        name: (symbol)
      )
    )
    body: (block
      (expression_statement
        (array_indexed_access
          array: (symbol)
          index: (int_literal)
        )
      )
    )
  )
)


==============================
access array member - variable
==============================

void MyFunc(int[] myvar) {
    myvar[MAXPLAYERS];
    myvar[client];
}

---

(source_file
  (function_definition
    returnType: (type
      (builtin_type)
    )
    name: (symbol)
    parameters: (parameter_declarations
      (parameter_declaration
        type: (array_type
          (type
            (builtin_type)
          )
          (dimension)
        )
        name: (symbol)
      )
    )
    body: (block
      (expression_statement
        (array_indexed_access
          array: (symbol)
          index: (symbol)
        )
      )
      (expression_statement
        (array_indexed_access
          array: (symbol)
          index: (symbol)
        )
      )
    )
  )
)


=================================
access array member - computation
=================================

void MyFunc(int[] myvar) {
    myvar[MAXPLAYERS+1];
}

---

(source_file
  (function_definition
    returnType: (type
      (builtin_type)
    )
    name: (symbol)
    parameters: (parameter_declarations
      (parameter_declaration
        type: (array_type
          (type
            (builtin_type)
          )
          (dimension)
        )
        name: (symbol)
      )
    )
    body: (block
      (expression_statement
        (array_indexed_access
          array: (symbol)
          index: (binary_expression
            left: (symbol)
            right: (int_literal)
          )
        )
      )
    )
  )
)


==================================
access array member - array member
==================================

int MyFunc(int[] myvar) {
    return myvar[myvar[0]];
}

---

(source_file
  (function_definition
    returnType: (type
      (builtin_type)
    )
    name: (symbol)
    parameters: (parameter_declarations
      (parameter_declaration
        type: (array_type
          (type
            (builtin_type)
          )
          (dimension)
        )
        name: (symbol)
      )
    )
    body: (block
      (return_statement
        (array_indexed_access
          array: (symbol)
          index: (array_indexed_access
            array: (symbol)
            index: (int_literal)
          )
        )
      )
    )
  )
)


======================================
access array member - multidimensional
======================================

int MyFunc(int[][] myvar) {
    return myvar[0][client];
}

---

(source_file
  (function_definition
    returnType: (type
      (builtin_type)
    )
    name: (symbol)
    parameters: (parameter_declarations
      (parameter_declaration
        type: (array_type
          (type
            (builtin_type)
          )
          (dimension)
          (dimension)
        )
        name: (symbol)
      )
    )
    body: (block
      (return_statement
        (array_indexed_access
          array: (array_indexed_access
            array: (symbol)
            index: (int_literal)
          )
          index: (symbol)
        )
      )
    )
  )
)


======================================
access array member - array from field
======================================

int MyFunc(File target) {
    return target.buffer[0];
}

---

(source_file
  (function_definition
    returnType: (type
      (builtin_type)
    )
    name: (symbol)
    parameters: (parameter_declarations
      (parameter_declaration
        type: (type
          (symbol)
        )
        name: (symbol)
      )
    )
    body: (block
      (return_statement
        (array_indexed_access
          array: (field_access
            target: (symbol)
            field: (symbol)
          )
          index: (int_literal)
        )
      )
    )
  )
)
