test/corpus/conditional_expression.txt
======================
conditional expression
======================

int GetOppositeDirection() {
    i < 0 ? Plugin_Handled : MyFunc();
    return i < 0 ? 0 : i;
}

---

(source_file
    (function_declaration
        returnType: (builtin_type)
        name: (symbol)
        arguments: (argument_declarations)
        (block
            (expression_statement
                (conditional_expression
                    condition: (binary_expression
                        left: (symbol)
                        right: (int_literal))
                    consequence: (symbol)
                    alternative: (function_call
                        function: (symbol)
                        (function_call_arguments)))
                (semicolon))
            (return_statement
                (conditional_expression
                    condition: (binary_expression
                        left: (symbol)
                        right: (int_literal))
                    consequence: (int_literal)
                    alternative: (symbol))
                (semicolon)))))


============================================
conditional expression - old style type cast
============================================

int GetOppositeDirection() {
    new Handle:userMessage = StartMessageOne("Fade", client, (reliable?USERMSG_RELIABLE:0));
    return i < 0 ? (_:2.5) : (Action:0);
}

---

(source_file
    (function_declaration
        returnType: (builtin_type)
        name: (symbol)
        arguments: (argument_declarations)
        (block
            (conditional_expression
                condition: (binary_expression
                    left: (symbol)
                    right: (int_literal))
                consequence: (parenthesized_expression
                    (old_type_cast
                        type: (old_builtin_type)
                        value: (float_literal)))
                alternative: (parenthesized_expression
                    (old_type_cast
                        type: (symbol)
                        value: (int_literal))))
            (return_statement
                (conditional_expression
                    condition: (binary_expression
                        left: (symbol)
                        right: (int_literal))
                    consequence: (parenthesized_expression
                        (old_type_cast
                            type: (old_builtin_type)
                            value: (float_literal)))
                    alternative: (parenthesized_expression
                        (old_type_cast
                            type: (symbol)
                            value: (int_literal))))
                (semicolon)))))


==================================================
conditional expression with conditional expression
==================================================

int GetOppositeDirection() {
    return i < 0
        ? 0
        : i > 10
            ? 10
            : i;
}

---

(source_file
    (function_declaration
        returnType: (builtin_type)
        name: (symbol)
        arguments: (argument_declarations)
        (block
            (return_statement
                (conditional_expression
                    condition: (binary_expression
                        left: (symbol)
                        right: (int_literal))
                    consequence: (int_literal)
                    alternative: (conditional_expression
                        condition: (binary_expression
                            left: (symbol)
                            right: (int_literal))
                        consequence: (int_literal)
                        alternative: (symbol)))
                (semicolon)))))